# build-vcxproj

./: Cargo.toml  README.md
src/: lib.rs  sample_builder.rs  vcpkg.rs
