[package]
name = "build-vcxproj"
version = "0.1.5"
categories = ["development-tools"]
description = "load sources from vcxproj in build.rs"
edition = "2021"
keywords = ["build", "msvc"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/swigger/build-vcxproj"
homepage = "https://github.com/swigger/build-vcxproj"
rust-version = "1.77"

[dependencies]
bitflags = "2.9.1"
cc = "1.2.19"
glob = "0.3.2"
xml-rs = "0.8.20"
